plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

jar {
    enabled = true
}

bootJar {
    enabled = false
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.data:spring-data-r2dbc'
    implementation 'org.springframework.data:spring-data-commons'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'com.navercorp.fixturemonkey:fixture-monkey:1.1.6'
    implementation 'com.navercorp.fixturemonkey:fixture-monkey-jackson:1.1.6'

    implementation 'org.slf4j:slf4j-reload4j:2.0.11'
    implementation 'com.google.protobuf:protobuf-java:4.28.3'

    implementation 'org.jooq:jooq'

    testImplementation 'org.mockito:mockito-core:5.15.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    testImplementation 'org.assertj:assertj-core:3.25.1'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')
}
